<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "/>

        <TextView
            android:id="@+id/txtFilesHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/files_heading"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txtAssetFiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "/>

        <EditText
            android:id="@+id/edtFileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/file_hint"/>

        <Button
            android:id="@+id/btnReadCSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/read_csv"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "/>

        <Button
            android:id="@+id/btnShowData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/data_summary"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtFileData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "/>

        <Button
            android:id="@+id/btnExitPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/exit_page"
            android:textAlignment="center"
            android:textStyle="bold"/>


    </LinearLayout>

</ScrollView>